[package]
name = "estunnel"
version = "1.0.5"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "Tools for downloading data from elasticsearch cluster."
repository = "https://github.com/wfxr/estunnel"
edition = "2018"

[dependencies]
reqwest = "0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
crossbeam = "0.7"
indicatif = "0"
structopt = { version = "0.2", default-features = true }
