[package]
name = "estunnel"
version = "1.8.5-rc.1"
authors = ["Wenxuan Zhang <wenxuangm@gmail.com>"]
description = "Tool for downloading data from elasticsearch cluster."
repository = "https://github.com/wfxr/estunnel"
edition = "2018"
readme = "README.md"
license = "MIT"
keywords = [
    "es",
    "elasticsearch",
    "scroll",
    "tool",
    "download",
]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_derive = "1.0"
crossbeam = "0.7"
indicatif = "0"
structopt = { version = "0.3", default-features = true }
rpassword = "3"
threadpool = "1"
num_cpus = "1"
self_update = { version = "0", features = ["archive-tar", "compression-flate2"] }
regex = "1"
